--- a/translation/dest/puzzleTheme/be-BY.xml
+++ b/translation/dest/puzzleTheme/be-BY.xml
@@ -36,10 +36,10 @@
   <string name="mateIn4Description">Пастаўце мат у чатыры хады.</string>
   <string name="mateIn5">Мат у 5 хадоў</string>
   <string name="mateIn5Description">Знайдзіце доўгую матавую паслядоўнасць.</string>
-  <string name="mateIn7">Mate in 7</string>
-  <string name="mateIn7Description">Deliver checkmate in seven moves.</string>
-  <string name="mateIn9">Mate in 9 or more</string>
-  <string name="mateIn9Description">Figure out a long mating sequence.</string>
+  <string name="mateIn7">Мат у 7 хадоў</string>
+  <string name="mateIn7Description">Пастаўце мат у сем хадоў.</string>
+  <string name="mateIn9">Мат у 9 хадоў і болей</string>
+  <string name="mateIn9Description">Знайдзіце доўгую матавую паслядоўнасць.</string>
   <string name="middlegame">Мітальшпіль</string>
   <string name="middlegameDescription">Тактыка на другім этапе гульні.</string>
   <string name="oneMove">Аднахадовая задача</string>
@@ -58,20 +58,20 @@
   <string name="shortDescription">Да перамогі 2 хады.</string>
   <string name="healthyMix">Здаровая сумесь</string>
   <string name="healthyMixDescription">Патрошкі ўсяго. Вы ня ведаеце чаго чакаць, таму гатовы да ўсяго! Як у сапраўдных гульнях.</string>
-  <string name="tsume">Tsume</string>
-  <string name="tsumeDescription">Your goal is to checkmate your opponent. Every move you make has to be a check.</string>
-  <string name="strikingPawn">Striking pawn</string>
-  <string name="strikingPawnDescription">A tactitc involving dropping a pawn in front of opponent\'s piece and attacking it.</string>
-  <string name="joiningPawn">Joining pawn</string>
-  <string name="joiningPawnDescription">A tactic in which a pawn is sacrificially dropped in front of opponent\'s piece.</string>
-  <string name="dancingPawns">Dancing pawns</string>
-  <string name="dancingPawnsDescription">A tactic to capture opponent\'s gold with sacrificing a pawn.</string>
-  <string name="edgeAttack">Edge attack</string>
-  <string name="edgeAttackDescription">A tactic involving attacking opponent\'s first or ninth file.</string>
+  <string name="tsume">Цумэ</string>
+  <string name="tsumeDescription">Ваша мэта - паставіць мат суперніку. Кожны ход павінен быць шахам.</string>
+  <string name="strikingPawn">Ударная пешка</string>
+  <string name="strikingPawnDescription">Тактыка, звязаная з выкідам пешкі перад фігурай супраціўніка і атакуючы яе.</string>
+  <string name="joiningPawn">Далучэнне пешкі</string>
+  <string name="joiningPawnDescription">Тактыка, у якой вы ахвяруеце пешку, скінуўшы яе перад фігурай супраціўніка.</string>
+  <string name="dancingPawns">Танцуючыя пешкі</string>
+  <string name="dancingPawnsDescription">Тактыка захопу золата суперніка з прынясеннем у ахвяру пешкі.</string>
+  <string name="edgeAttack">Атака з краю</string>
+  <string name="edgeAttackDescription">Тактыка, якая прадугледжвае атаку першай або дзясятай шарэнгі праціўніка.</string>
   <string name="veryLong">Вельмі доўгая задача</string>
   <string name="veryLongDescription">Чатыры або больш хадоў да перамогі.</string>
-  <string name="lishogiGames">From Lishogi games</string>
-  <string name="lishogiGamesDescription">Puzzles generated from games played on Lishogi.</string>
-  <string name="otherSources">From other sources</string>
-  <string name="otherSourcesDescription">Many thanks to everyone who submitted or allowed Lishogi to use these puzzles!</string>
+  <string name="lishogiGames">З гульняў Lishogi</string>
+  <string name="lishogiGamesDescription">Галаваломкі, створаныя на аснове гульняў, у якія гулялі на Lishogi.</string>
+  <string name="otherSources">З іншых крыніц</string>
+  <string name="otherSourcesDescription">Вялікі дзякуй усім, хто прадаставіў або дазволіў Lishogi выкарыстоўваць гэтыя пазлы!</string>
 </resources>
