--- a/translation/dest/faq/be-BY.xml
+++ b/translation/dest/faq/be-BY.xml
@@ -30,7 +30,7 @@
 	<string name="howBulletBlitzEtcDecided">Як кантролі часу Кулі, Бліцу ды іншых вырашаны?</string>
 	<string name="basedOnGameDuration">Кантролі часу на Lishogi заснаваны на чаканай працягласці гульні = %1$s
 Напрыклад, чаканая працягласць гульні 5+3 = 5 × 60 + 40 × 3 = 420 сякунд.</string>
-	<string name="formulaOfDuration">60 × (clock initial time in minutes) + 60 × (clock increment) + 25 × (clock byoyomi) × (clock periods)</string>
+	<string name="formulaOfDuration">60*(пачатковы час у хвілінах) + 60 * (прырост часу)+25*(час бёёмі)*(перыяды часоў)</string>
 	<string name="inferiorThanXsEqualYtimeControl">&lt; %1$s с = %2$s</string>
 	<string name="superiorThanXsEqualYtimeControl">≥ %1$s с = %2$s</string>
 	<string name="whatVariantsCanIplay">У якія разнастайнасці шахмат магчыма згуляць на Lishogi?</string>
